--- a/languages/_s.pot
+++ b/languages/_s.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: _s 1.0-wpcom\n"
+"Project-Id-Version: treehouse 1.0-wpcom\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2013-12-19 02:31:31+00:00\n"
 "MIME-Version: 1.0\n"
@@ -302,25 +302,23 @@ msgid "Meta"
 msgstr ""
 
 #. Theme Name of the plugin/theme
-msgid "_s"
+msgid "Treehouse"
 msgstr ""
 
 #. Theme URI of the plugin/theme
-msgid "http://underscores.me/"
+msgid "http://tembusu.nus.edu.sg/treehouse"
 msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if "
-"you like. I'm a theme meant for hacking so don't use me as a <em>Parent "
-"Theme</em>. Instead try turning me into the next, most awesome, WordPress "
-"theme out there. That's what I'm here for."
+"This is the custom theme built by Cedric Chin (@ejames_c) with Marcus Tan's design"
+"work, for Tembusu College. Base theme is <code>_s</code>, from Automattic."
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "Automattic"
+msgid "Cedric Chin / Eli James"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://automattic.com/"
+msgid "http://elijames.org"
 msgstr ""
